# SOEM

./: .gitignore  CMakeLists.txt
soem/: ethercatconfig.c
test/controller/: CMakeLists.txt  EthercatControlHeader.qml  EthercatStateDiagram.qml  basiclistmodel.cpp  basiclistmodel.h  main.cpp  main.qml  network.cpp  network.h  qml.qrc  slave.cpp  slave.h  slaveinfo.cpp  slaveinfo.h
test/controller/fal/: object.cpp  object.h  subobject.cpp  subobject.h  utils.cpp  utils.h
